feat: add Metaplex meta data
