# libs/api/identity/data-access/src/lib/entity/identity.entity.ts
@@ -1,5 +1,6 @@
 import { Field, HideField, ObjectType } from '@nestjs/graphql'
 import { ApiProperty } from '@nestjs/swagger'
+import { Account } from '@pubkeyapp/api/account/data-access'
 import { GraphQLJSON } from 'graphql-scalars'
 import { IdentityProvider } from './identity-provider.enum'
 
@@ -26,6 +27,10 @@ export class Identity {
   @ApiProperty({ nullable: true, required: false })
   @Field(() => GraphQLJSON, { nullable: true })
   profile?: unknown
+
+  @ApiProperty({ nullable: true, required: false })
+  @Field(() => [Account], { nullable: true })
+  accounts?: Account[]
 
   @ApiProperty()
   @Field()
